# gateway-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  docker-compose.yml  rebar.config  release.toml
.cargo/: config  config.toml
.github/cross-docker/: Dockerfile-cross-debian-11
.github/workflows/: check.yml  ci.yml  release.yml
beacon/: Cargo.toml
beacon/src/: beacon.rs  entropy.rs  error.rs  lib.rs  region.rs
config/: conffiles  default.toml  metadata.deb.toml  settings.toml
entropy/: Cargo.toml
entropy/src/: lib.rs
lorawan/: Cargo.toml
lorawan/src/: error.rs  lib.rs  subnet.rs
package/bobcat/control/: prerm
package/bobcat/data/etc/helium_gateway/: install_update
package/caldigit/control/: install_update
package/caldigit/data/etc/helium_gateway/: settings.toml
package/clodpi/control/: control
package/clodpi/data/etc/helium_gateway/: settings.toml
package/clodpi/data/etc/init.d/: helium_gateway
package/cloudgate/control/: control  postinst  prerm
package/cloudgate/data/etc/helium_gateway/: settings.toml
package/cloudgate/data/etc/init.d/: helium_gateway
package/cotx/data/etc/helium_gateway/: settings.toml
package/dragino/control/: control  preinst  prerm
package/dragino/data/etc/helium_gateway/: settings.toml
package/dragino/data/etc/init.d/: helium_gateway
package/keros/: package.sh
package/keros/control/: prerm
package/keros/data/etc/helium_gateway/: settings.toml
package/keros/data/etc/init.d/: helium_gateway
package/keros/data/etc/rsyslog.d/: helium_gateway
package/klkgw/control/: control  postinst  prerm
package/klkgw/data/etc/helium_gateway/: install_update  settings.toml
package/klkgw/data/etc/init.d/: helium_gateway
package/klkgw/data/etc/logrotate.d/: helium_gateway
package/klkgw/data/etc/monit.d/: helium_gateway
package/longap_pro_atecc/data/etc/helium_gateway/: settings.toml
package/mipsel_24kc/data/etc/helium_gateway/: settings.toml
package/mtcdt/control/: control  postinst  prerm
package/mtcdt/data/etc/helium_gateway/: settings.toml
package/mtcdt/data/etc/init.d/: helium_gateway
package/mtcdt/data/etc/logrotate.d/: helium_gateway
package/openwrt/: package.sh
package/openwrt/control/: control
package/openwrt/data/etc/helium_gateway/: settings.toml
package/ramips_24kec/control/: postinst  prerm
package/ramips_24kec/data/etc/helium_gateway/: install_update  settings.toml
package/ramips_24kec/data/etc/init.d/: helium_gateway
package/raspi01/control/: postinst
package/raspi01/data/etc/helium_gateway/: settings.toml
package/raspi234/control/: preinst  service
package/raspi234/data/etc/helium_gateway/: install_update  settings.toml
package/resiot/control/: control  postinst  prerm
package/resiot/data/etc/init.d/: helium_gateway
package/risinghf/data/etc/helium_gateway/: settings.toml
package/smartharvest/control/: prerm
package/smartharvest/data/etc/helium_gateway/: settings.toml
package/smartharvest/data/etc/init.d/: helium_gateway
package/tektelic/control/: control  postinst  preinst
package/tektelic/data/etc/helium_gateway/: settings.toml
package/tektelic/data/etc/logrotate.d/: helium_gateway
package/tektelic/data/usr/share/syslog-ng/include/tektelic/custom/: helium-gateway.conf
package/x86_64/control/: postinst  service
package/x86_64/data/etc/helium_gateway/: settings.toml
src/: base64.rs  beaconer.rs  beaconing.rs  curl.rs  error.rs  gateway.rs  key.rs  keyed_uri.rs  keypair.rs  lib.rs  link_packet.rs  main.rs  message_cache.rs  metrics.rs  msg_sign.rs  msg_verify.rs  packet.rs  region.rs  region_watcher.rs  releases.rs  result.rs  router.rs  server.rs  settings.rs  state_channel.rs  sync.rs  txn_envelope.rs  txn_fee.rs  updater.rs
src/api/: api.proto  client.rs  mod.rs  server.rs
src/cmd/: add.rs  info.rs  key.rs  mod.rs  server.rs  update.rs
src/packet_router/: mod.rs
src/router/: client.rs  dispatcher.rs  filter.rs  mod.rs  router_client.rs  routing.rs  state_channel_message.rs  store.rs
src/service/: api.rs  conduit.rs  config.rs  entropy.rs  gateway.rs  mod.rs  packet_router.rs  poc.rs  router.rs  version.rs
src/state_channel/: channel.rs  message.rs  mod.rs
src/traits/: base64.rs  mod.rs  msg_sign.rs  msg_verify.rs  txn_envelope.rs  txn_fee.rs
src/updater/: mod.rs  releases.rs
