[package]
name = "gateway-rs"
description = "Helium Gateway for LoRa packet forwarders"
version = "1.0.0-alpha.33"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "helium_gateway"
path = "src/main.rs"
doc = false

[workspace]
members = ["lorawan", "beacon"]

[workspace.dependencies]
serde = {version = "1", features = ["rc", "derive"]}
rust_decimal = {version = "1", features = ["serde-with-float"]}
helium-proto = { git = "https://github.com/helium/proto", branch="master", features=["services"]}
rand = "0.8"
base64 = "0"
sha2 = "0"
thiserror = "1.0"

[dependencies]
clap = {version = "4", features = ["derive"]}
cfg-if = "1"
semver = "0"
config = {version="0", default-features=false, features=["toml"]}
serde = {workspace = true}
serde_json = "1"
serde_urlencoded = "*"
http-serde = "1"
tokio = { version="1", default-features=false, features=["macros", "signal", "rt", "time", "sync"] }
tokio-stream = {version="0", default-features=false }
futures = "*"
triggered = "0.1"
slog = "2"
slog-async = "2"
slog-term = "2"
slog-syslog = "0"
slog-scope = "4"
slog-stdlog = "4"
thiserror = {workspace = true}
rand = {workspace = true}
rust_decimal = {workspace = true}
prost = "0"
daemonize = "0.4"
tonic = "0"
http = "*"
log = "0"
bytes = "*"
xxhash-rust = { version = "0.8", features = ["xxh64"]}
xorf = "0.7"
sha2 = {workspace = true}
base64 = {workspace = true}
helium-proto = {workspace = true}
signature = "1.3"
async-trait = "0"
angry-purple-tiger = "0"
lorawan = { package = "lorawan", path = "lorawan" }
beacon = { package = "beacon", path = "beacon" }
exponential-backoff = {git = "https://github.com/yoshuawuyts/exponential-backoff", branch = "master"}
semtech-udp = { version = ">=0.10.1", default-features=false, features=["server"] }
helium-crypto = "0.6.2"

[features]
default = [ "ecc608" ]
ecc608 = [ "helium-crypto/ecc608" ]
tpm = ["helium-crypto/tpm"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
#debug = true
#strip = "debuginfo"
strip = "symbols"

