[package]
name = "gateway-rs"
description = "Helium Gateway for LoRa packet forwarders"
version = "1.1.1"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "helium_gateway"
path = "src/main.rs"
doc = false

[workspace]
members = ["lorawan"]

[workspace.dependencies]
byteorder = "1"
serde = { version = "1", features = ["rc", "derive"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = [
    "services",
] }
rand = "0.8"
base64 = ">=0.21"
sha2 = "0"
thiserror = "1.0"
prost = "0"

[dependencies]
clap = { version = "4", default-features = false, features = [
    "derive",
    "help",
    "std",
    "error-context",
] }
bs58 = "0"
semver = "0"
config = { version = "0", default-features = false, features = ["toml"] }
serde = { workspace = true }
serde_json = "1"
serde_urlencoded = "*"
http-serde = "1"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "signal",
    "rt",
    "time",
    "sync",
] }
tokio-stream = { version = "0", default-features = false }
futures = "*"
triggered = "0.1"
tracing = "0"
tracing-subscriber = { version = "0", default-features = false, features = [
    "smallvec",
    "fmt",
    "std",
] }
tracing-appender = "0"
thiserror = { workspace = true }
rand = { workspace = true }
prost = { workspace = true }
tonic = "0"
http = "*"
sha2 = { workspace = true }
base64 = { workspace = true }
helium-proto = { workspace = true }
signature = { version = "1", features = ["std"] }
async-trait = "0"
angry-purple-tiger = "0"
lorawan = { package = "lorawan", path = "lorawan" }
beacon = { git = "https://github.com/helium/proto", branch = "master" }
exponential-backoff = { git = "https://github.com/yoshuawuyts/exponential-backoff", branch = "master" }
semtech-udp = { version = ">=0.11", default-features = false, features = [
    "server",
] }
helium-crypto = ">=0.8"
time = { version = ">=0.3", features = ["std"] }

[features]
default = ["ecc608"]
ecc608 = ["helium-crypto/ecc608"]
tpm = ["helium-crypto/tpm"]

[dev-dependencies]
time = { version = ">=0.3", features = ["std", "macros"] }


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
#debug = true
#strip = "debuginfo"
strip = "symbols"

[package.metadata.cross.build]
pre-build = ["apt-get install -y protobuf-compiler"]
