[package]
name = "beacon"
version = "0.1.0"
authors = ["Marc Nijdam <marc@nova-labs.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
rand_chacha = ">=0.3"
prost = {workspace = true}
helium-proto = {workspace = true}
rand = {workspace = true}
base64 = {workspace = true}
serde = {workspace = true}
sha2 = {workspace = true}
thiserror = {workspace = true}
rust_decimal = {workspace = true}
byteorder = {workspace = true}
lazy_static = "1"

[dev-dependencies]
serde_json = "1"
