[package]
name = "lorawan"
version = "0.1.0"
authors = ["Marc Nijdam <marc_@helium.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
bitfield = "0.13"

[dev-dependencies]
base64 = "0.12"
